[package]
name = "interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-multipart = "0.3"
actix-web = "3"
env_logger = "0.8"
futures-util = "0.3"
sanitize-filename = "0.2"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
json = "0.12"
strum = "0.23"
strum_macros = "0.23"
